<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cLg-yc-0fq">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BM_Aws_Integration" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="bN0-oa-oYY">
                                <rect key="frame" x="10" y="264" width="355" height="139"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fpz-hb-zfs">
                                        <rect key="frame" x="0.0" y="0.0" width="355" height="33"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                        <state key="normal" title="Upload"/>
                                        <connections>
                                            <action selector="uploadFileToAws:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gpm-og-aRb"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n9p-rF-BoZ">
                                        <rect key="frame" x="0.0" y="53" width="355" height="33"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                        <state key="normal" title="Download"/>
                                        <connections>
                                            <action selector="downloadFileFromAws:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lmv-a4-Glt"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBw-cp-V9p">
                                        <rect key="frame" x="0.0" y="106" width="355" height="33"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                        <state key="normal" title="View Downloaded File"/>
                                        <connections>
                                            <segue destination="g8M-oM-B8P" kind="show" identifier="WebViewSegue" id="ZCs-Vv-O61"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="bN0-oa-oYY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="5af-lx-Ajw"/>
                            <constraint firstItem="bN0-oa-oYY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M1w-dg-fJ2"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bN0-oa-oYY" secondAttribute="trailing" constant="10" id="X92-o7-Qub"/>
                            <constraint firstItem="bN0-oa-oYY" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dKD-pb-wry"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="BUC-8J-RdM"/>
                    <connections>
                        <outlet property="downloadButton" destination="n9p-rF-BoZ" id="HTA-NH-D2C"/>
                        <outlet property="uploadButton" destination="fpz-hb-zfs" id="pFS-xc-bQC"/>
                        <outlet property="viewFileButton" destination="DBw-cp-V9p" id="nCl-dl-eUX"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1076" y="87.706146926536732"/>
        </scene>
        <!--Web View Controller-->
        <scene sceneID="eBZ-Na-bcK">
            <objects>
                <viewController storyboardIdentifier="WebViewController" id="g8M-oM-B8P" customClass="WebViewController" customModule="BreatheMapper" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="txj-HH-EeR">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ypa-A4-nhf">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="ypa-A4-nhf" firstAttribute="leading" secondItem="HFB-0M-7An" secondAttribute="leading" id="DwJ-lA-W7B"/>
                            <constraint firstItem="ypa-A4-nhf" firstAttribute="bottom" secondItem="HFB-0M-7An" secondAttribute="bottom" id="Od4-bR-gkL"/>
                            <constraint firstItem="ypa-A4-nhf" firstAttribute="top" secondItem="HFB-0M-7An" secondAttribute="top" id="TYO-wx-F4a"/>
                            <constraint firstItem="ypa-A4-nhf" firstAttribute="trailing" secondItem="HFB-0M-7An" secondAttribute="trailing" id="dtN-sC-Dnt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HFB-0M-7An"/>
                    </view>
                    <navigationItem key="navigationItem" id="Mhl-oD-ARr"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="shouldAddGradientBackground" value="NO"/>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="shouldShowNavigationBar" value="YES"/>
                        <userDefinedRuntimeAttribute type="string" keyPath="localizedKey" value="LEGAL_AGREEMENT"/>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="shouldShowStatusBar" value="YES"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <outlet property="webViewPlaceholderView" destination="ypa-A4-nhf" id="SjR-tO-Qbj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CuN-hm-hBL" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1840.8" y="87.706146926536732"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="6TE-ZP-eJu">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cLg-yc-0fq" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="m0P-ub-XTd">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="rr3-oz-jlB"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9kn-pE-aAy" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="87.706146926536732"/>
        </scene>
    </scenes>
</document>
